--- a/systeme/css/footer.css
+++ b/systeme/css/footer.css
@@ -1,62 +1,125 @@
-.footer {
-display: flex;
-justify-content: space-around;
-height: 250px;
-width: 1900px;
-background-color: #228B22;
-position: absolute;
-margin-top: 2200px;
+@media screen and (min-width:1280px) {
+	.footer {
+		display: flex;
+		justify-content: space-around;
+		width: 100%;
+		background-color: #228B22;
+		position: relative;
+		margin-top: 20px;
+	}
+
+	.col {
+		width: 20%;
+	}
+
+	.footer1 {
+		width: 20%;
+	}
+
+	.footer1 img {
+		width: 60%;
+		margin: 10% 20%;
+	}
+
+	.f2 {
+		color: white;
+		margin-top: 30px;
+		font-size: 14px;
+	}
+
+	.f3 div {
+		width: 100%;
+		font-size: 25px;
+		margin-top: 35px;
+		margin-left: 80px;
+	}
+
+	.footer a {
+		text-decoration: none;
+		color: white;
+	}
+
+	.f4 {
+		margin: 100px auto;
+		height: 50px;
+		width: 100px;
+		background-color: #5eaf4d;
+		border-radius: 10px;
+		font-size: 22px;
+		text-align: center;
+		line-height: 50px;
+	}
+
+	.footer5 {
+		width: 20%;
+	}
+
+	.footer5 img {
+		width: 60%;
+		margin: 10% 20%;
+	}
+
+	.footer a:hover {
+		color: yellow;
+	}
 }
 
-.col-2 {
-display: block;
-position: relative;
-min-height: 1px;
-float: left;
-width: 20%;
+
+
+
+
+
+
+
+@media screen and (max-width:1279px) {
+	.footer {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		background-color: #228B22;
+		position: relative;
+	}
+
+	.footer1 img {
+		width: 20%;
+		margin: 0 40%;
+	}
+
+	.f2 {
+		color: white;
+		margin-top: 30px;
+		font-size: 14px;
+		display: none;
+	}
+
+	.f3 div {
+		font-size: 25px;
+		width: 60%;
+		margin: 10px auto;
+		text-align: center;
+	}
+
+	.footer a {
+		text-decoration: none;
+		color: white;
+	}
+
+	.f4 {
+		margin: 10px auto;
+		height: 50px;
+		width: 100px;
+		background-color: #5eaf4d;
+		border-radius: 10px;
+		font-size: 22px;
+		text-align: center;
+		line-height: 50px;
+	}
+
+	.footer a:hover {
+		color: yellow;
+	}
+
+	.footer5 {
+		display: none !important;
+	}
 }
-
-.f2 {
-color: white;
-margin-top: 30px;
-font-size: 14px;
-}
-
-
-.f3 div {
-font-size: 25px;
-margin-top: 35px;
-margin-left: 80px;
-
-}
-
-.footer a {
-text-decoration: none;
-color: white;
-}
-
-.f4 {
-margin: 100px auto;
-height: 50px;
-width: 150px;
-background-color: #5eaf4d;
-border-radius: 10px;
-font-size: 22px;
-text-align: center;
-line-height: 50px;
-}
-
-.footer a:hover {
-color: yellow;
-}
-
-#EPA {
-	height:150px;
-	margin:35px 0 0 20px;
-}
-
-#GW {
-	height:130px;
-	margin:40px 0 0 40px;
-}
-
