--- a/systeme/css/index.css
+++ b/systeme/css/index.css
@@ -1,167 +1,363 @@
-*, ::before, ::after{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+* {
+	margin: 0;
+	padding: 0;
 }
-
 
 body {
 	font-size: 14px;
 	color: #444;
 }
 
-.header {
-box-sizing: content-box;
-/* height: 800px;
-width: 1080px; */
-height: 100%;
-width: 100%;
-position: absolute;
-background-image: url('../img/index_header.jpg');
-background-repeat: no-repeat;
-background-size: 1900px 800px;
-/* margin-left: 400px; */
+/* 栅格 */
+.col-1,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+	{
+	display: block;
+	position: relative;
+	min-height: 1px;
+	float: left;
 }
 
-.head {
-position: absolute;
-top: 50%;
-margin-top: -300px;
-left: 50%;
-margin-left: -200px;
-width: 400px;
-height: 400px;
-border-radius: 25px;
-text-align: center;
-color: white;
-}
-
-.btn {
-background-color: #5eaf4d;
-border-radius: 14px;
-height: 50px;
-width: 200px;
-font-size: 18px;
-margin-top: 70px;
-color: white;
-}
-
-.btn:hover {
-background-color: forestgreen;
-}
-
-.pourquoi {
-box-sizing: content-box;
-height: 700px;
-width: 1900px;
-background-color: #5eaf4d;
-position: absolute;
-margin-top: 800px;
-}
-
-.les3 {
-display: flex;
-margin-top: 50px;
-height: 533px;
-width: 1900px;
-/* background-color: #4169E1; */
-justify-content: space-around;
+.col-1 {
+	width: 10%;
 }
 
 .col-2 {
-display: block;
-position: relative;
-min-height: 1px;
-float: left;
-width: 20%;
+	width: 20%;
 }
 
-.les {
-text-align: center;
-color: white;
+.col-3 {
+	width: 30%;
 }
 
-.intro {
-display: grid;
-grid-template-rows: 1fr 1fr;
-grid-template-columns: 1fr 1fr;
-grid-template-areas:
-"choisir foire"
-"support revendeur";
-height: 700px;
-width: 1900px;
-/* background-color: #4169E1; */
-position: absolute;
-margin-top: 1500px;
+.col-4 {
+	width: 40%;
 }
 
-.choisir {
-grid-area: choisir;
-/* background-color: red; */
-text-align: left;
-color: #228B22;
+.col-5 {
+	width: 50%;
 }
 
-.foire {
-grid-area: foire;
-/* background-color: orange; */
-color: #228B22;
+.col-6 {
+	width: 60%;
 }
 
-.support {
-grid-area: support;
-/* background-color: yellow; */
-color: #228B22;
+.col-7 {
+	width: 70%;
 }
 
-.revendeur {
-grid-area: revendeur;
-/* background-color: green; */
-color: #228B22;
+.col-8 {
+	width: 80%;
 }
 
-
-#écritureGW {
-font-size: 75px;
-}
-
-#écriturefenêtre {
-font-size: 80px;
-white-space: nowrap;
-margin-left: -330px;
-}
-
-#pourquoiGW {
-font-size: 50px;
-text-align: center;
-color: white;
-margin-top: 50px;
-margin-bottom: 100px;
-}
-
-#fonction_av_sec {
-  margin-top: 80px;
-  font-size: 30px;
-}
-
-#contrôle {
-  margin-top: 50px;
-  font-size: 20px;
-}
-
-#choisir_FAQ_sup {
-  margin: 165px 0 0 200px;
-  font-size:30px;
-}
-
-#qualité_rep_sup {
-  margin: 30px 0 0 200px;
-  font-size:15px;
-}
-
-#savoir_FAQ_sup {
-  margin: 30px 0 0 200px;
+.col-9 {
+	width: 90%;
 }
 
 
 
+
+
+@media screen and (min-width:1280px) {
+
+
+
+	.header {
+		height: 800px;
+		width: 100%;
+		position: relative;
+		background-image: url(../img/try.jpg);
+		background-repeat: no-repeat;
+		background-size: 100%;
+		margin-top: 20px;
+		-webkit-transition: all 0.6s ease-out;
+		background-position: center;
+	}
+
+
+	.head {
+		font-family: helvetica;
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		border-radius: 25px;
+		text-align: center;
+		color: white;
+		text-decoration: none;
+	}
+
+	.header:hover {
+		background-size: 115%;
+	}
+
+	#h1 {
+		font-size: 75px;
+		margin-top: 350px;
+	}
+
+	#h2 {
+		font-size: 80px;
+	}
+
+	#h3 {
+		font-size: 20px;
+		width: 15%;
+		height: 7%;
+		background-color: white;
+		border-radius: 10px;
+		color: #5eaf4d;
+		border: 3px solid #5eaf4d;
+		line-height: 54px;
+		margin: 25px auto;
+	}
+
+	.header:hover #h1 {
+		font-size: 85px !important;
+		margin-top: 330px !important;
+		color: #5eaf4d !important;
+		-webkit-transition: all 0.6s ease;
+	}
+
+	.header:hover span {
+		color: white !important;
+		font-size: 85px !important;
+		-webkit-transition: all 0.6s ease;
+	}
+
+	.header:hover #h2 {
+		color: #5eaf4d !important;
+		font-size: 90px !important;
+		-webkit-transition: all 0.6s ease;
+	}
+
+	.header:hover #h3 {
+		font-size: 25px !important;
+		border: none !important;
+		background-color: #5eaf4d !important;
+		color: white !important;
+		-webkit-transition: all 0.6s ease;
+	}
+
+	.btn {
+		background-color: #5eaf4d;
+		border-radius: 14px;
+		height: 50px;
+		width: 200px;
+		font-size: 18px;
+		margin-top: 70px;
+		color: white;
+	}
+
+	.btn:hover {
+		background-color: forestgreen;
+	}
+
+	.pourquoi {
+		box-sizing: content-box;
+		height: 700px;
+		width: 100%;
+		background-color: #5eaf4d;
+		position: relative;
+	}
+
+	.les3 {
+		display: flex;
+		margin-top: 50px;
+		height: 533px;
+		width: 100%;
+		justify-content: space-around;
+	}
+
+	.les {
+		width: 20%;
+		text-align: center;
+		color: white;
+	}
+
+	.intro {
+		display: grid;
+		grid-template-rows: 1fr 1fr;
+		grid-template-columns: 1fr 1fr;
+		grid-template-areas:
+			"choisir foire"
+			"support revendeur";
+		height: 700px;
+		width: 100%;
+		position: relative;
+		margin-top: 50px;
+	}
+
+	.choisir {
+		grid-area: choisir;
+		/* background-color: red; */
+		text-align: left;
+		color: #228B22;
+	}
+
+	.foire {
+		grid-area: foire;
+		/* background-color: orange; */
+		color: #228B22;
+	}
+
+	.support {
+		grid-area: support;
+		/* background-color: yellow; */
+		color: #228B22;
+	}
+
+	.revendeur {
+		grid-area: revendeur;
+		/* background-color: green; */
+		color: #228B22;
+	}
+
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:1279px) {
+
+
+
+	.header {
+		height: 500px;
+		width: 100%;
+		position: relative;
+		background-image: url(../img/try.jpg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		margin-top: 20px;
+		-webkit-transition: all 0.6s ease-out;
+		background-position: center;
+	}
+
+
+	.head {
+		font-family: helvetica;
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		border-radius: 25px;
+		text-align: center;
+		color: white;
+		text-decoration: none;
+	}
+
+	#h1 {
+		font-size: 50px;
+		margin-top: 18%;
+	}
+
+	#h2 {
+		font-size: 50px;
+	}
+
+	#h3 {
+		font-size: 10px;
+		width: 40%;
+		max-width: 250px;
+		height: 7%;
+		background-color: white;
+		border-radius: 10px;
+		color: #5eaf4d;
+		border: 3px solid #5eaf4d;
+		line-height: 250%;
+		margin: 25px auto;
+	}
+
+	.btn {
+		background-color: #5eaf4d;
+		border-radius: 14px;
+		height: 50px;
+		width: 200px;
+		font-size: 18px;
+		margin-top: 70px;
+		color: white;
+	}
+
+	.btn:hover {
+		background-color: forestgreen;
+	}
+
+	.pourquoi {
+		box-sizing: content-box;
+		width: 100%;
+		background-color: #5eaf4d;
+		position: relative;
+	}
+
+	.les3 {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		justify-content: space-around;
+	}
+
+	.les {
+		width: 100%;
+		text-align: center;
+		color: white;
+	}
+
+	.les p {
+		margin-bottom: 100px;
+	}
+
+	.les h2 {
+		margin-top: 2vh !important;
+	}
+
+	.intro {
+		display: grid;
+		grid-template-rows: 1fr 1fr;
+		grid-template-columns: 1fr 1fr;
+		grid-template-areas:
+			"choisir foire"
+			"support revendeur";
+		width: 100%;
+		position: relative;
+		margin-top: 1vh;
+	}
+
+	.choisir {
+		grid-area: choisir;
+		/* background-color: red; */
+		text-align: left;
+		color: #228B22;
+	}
+
+	.foire {
+		grid-area: foire;
+		/* background-color: orange; */
+		color: #228B22;
+	}
+
+	.support {
+		grid-area: support;
+		/* background-color: yellow; */
+		color: #228B22;
+	}
+
+	.revendeur {
+		grid-area: revendeur;
+		/* background-color: green; */
+		color: #228B22;
+	}
+
+
+}
