--- a/sys/css/popup.css
+++ b/sys/css/popup.css
@@ -59,11 +59,8 @@ cursor: pointer;
 }
 button.button {
 background:none;
-border-top:none;
+border:none;
 outline: none;
-border-right:none;
-border-left:none;
-border-bottom:none;
 padding:0 0 3px 0;
 font-size:16px;
 cursor:pointer;
